# hocgv-miso

./: .gitignore  CMakeLists.txt  EigenAdapters.hpp  generate.py  main.cpp
cmake/recipes/: eigen.cmake
tests/: CMakeLists.txt  test_jacobian.cpp
